crates/tests/src/snapshots/fe_compiler_tests__compile_errors__external_call_wrong_number_of_params.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `bar` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/external_call_wrong_number_of_params.fe:7:25
  │
7 │         Foo(address(0)).bar(42)
  │                         ^^^ -- supplied 1 argument
  │                         │    
  │                         expects 2 arguments


